<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="song"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="236dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:max="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_word" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="116dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:text="@string/search_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <RadioGroup
        android:id="@+id/rg_sorting"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sortby"
        app:layout_constraintTop_toBottomOf="@+id/bt_search">

        <RadioButton
            android:id="@+id/rd_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_track_label" />

        <RadioButton
            android:id="@+id/rd_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_artist" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_sortby"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/sort_label"
        app:layout_constraintEnd_toStartOf="@+id/rg_sorting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_search" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_label" >


    </ListView>

    <ProgressBar
        android:id="@+id/pg_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="139dp"
        android:layout_height="116dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sortby" />

    <TextView
        android:id="@+id/tv_search_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/search_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_sorting" />

    <TextView
        android:id="@+id/sb_tv_label"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sb_tv_label"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_word" />
</androidx.constraintlayout.widget.ConstraintLayout>